2002-08-22  Darin Adler  <darin@apple.com>

	Some small QString improvements.

        * kwq/qt/qstring.h: Add printf attribute to sprintf member function.
        * kwq/KWQString.mm:
	Remove extra \n characters from QSTRING_FAILURE calls. Change some
	fprintf to QSTRING_FAILURE. Change some QSTRING_FAILURE to KWQ_ASSERT.
        (QStringData::makeAscii): Fix bug where it would update _maxAscii
	with a new size even when it didn't allocate a new buffer.
        (QStringData::makeUnicode): Fix bug where it would update _maxUnicode
	with a new size even when it didn't allocate a new buffer.
        (QString::utf8): Fix bug where it assumed the UTF-8 form of a string
	has the same length as the Unicode version. Also save one allocation
	by doing it right into the QCString.
        (QString::local8Bit): Just call utf8().
        (QString::setNum): Have all these call our sprintf.
        (QString::sprintf): Format once to get the length. Then do the second
	format right into the string buffer. This way we don't have to do
	any allocation at all, nor use CFString.

=== Alexander-20 ===

2002-08-22  Darin Adler  <darin@apple.com>

	Fixed a one-click crasher that Ken and Don told me about.

        * kwq/KWQObject.mm: (QObject::QObject): Initialize m_eventFilterObject.

2002-08-21  Darin Adler  <darin@apple.com>

	- fixed 3021908 -- text areas should be plain text only

        * kwq/KWQTextArea.mm:
        (-[KWQTextArea _createTextView]): setRichText:NO
        (-[KWQTextArea dealloc]): Release the text view so we don't leak.

2002-08-21  Darin Adler  <darin@apple.com>

        * kwq/KWQNSViewExtras.m: (-[NSClipView _KWQ_scrollRectToVisible:inView:]):
	Use bounds, not visibleRect. Seems to work better.

2002-08-21  John Sullivan  <sullivan@apple.com>

	- commented out (with FIXME 2935687) the code that was advertising in
	the status bar that shift-command would open a link behind the
	current window, since it doesn't.

        * kwq/KWQKHTMLPartImpl.mm: