@@ -1,3 +1,11 @@
+2002-08-22  Richard Williamson (Local)  <rjw@apple.com>
+
+        New faster char * append (actually insert) for mjs.
+        
+        * kwq/KWQString.mm:
+        (QString::insert):
+        * kwq/qt/qstring.h:
+
 2002-08-22  Darin Adler  <darin@apple.com>
 
 	Some small QString improvements.
